# sttrepo

./: .gitignore  .gitmodules  LICENSE  README.md  env.sh
sherpa/sherpa-bridge/: Makefile  libsherpa-bridge.dylib  sherpa.c  sherpa.h  test.c
sherpa/sherpa-brigde/: libsherpa-bridge.dylib  sherpa.c  test.pcm
sherpa/sherpa-c-api/: Makefile  main.cpp  server.cpp  server.h  sherpa_c_api
sherpa/sherpa-native/shared/: sherpa-onnx.pc
sherpa/sherpa-native/shared/lib/: libcargs.dylib  libsherpa-onnx-c-api.dylib  libsherpa-onnx-cxx-api.dylib
sherpa/sherpa-native/shared/lib/pkgconfig/: espeak-ng.pc
stt-engine/: Cargo.toml  build.rs
stt-engine/data/: segment.sh
stt-engine/lib/: libsherpa-bridge.dylib
stt-engine/src/: benchmark.rs  client.rs  endpoint.rs  lib.rs  main.rs  sherpa.rs
stt-engine/src/server/: channel.rs  protol.rs  proxy.rs  worker.rs
