[package]
name = "stt-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "6.1.0"
derive-new = "0.7.0"
lazy_static = "1.5.0"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
